fix(transition): add overflow

--- a/packages/app/src/assets/scss/global.scss
+++ b/packages/app/src/assets/scss/global.scss
@@ -49,7 +49,9 @@ body,
 
 .page {
   &-enter-active {
+    overflow: hidden;
     transition: opacity .1s ease-out, transform .1s ease-out;
+    transform-origin: 50% 50vh;
   }
   &-enter {
     opacity: 0;
@@ -57,6 +59,7 @@ body,
   }
   &-leave-active {
     transition: opacity .1s ease-out;
+    overflow: hidden;
   }
   &-leave-to {
     opacity: 0;
